--- a/webpackDemo/package.json
+++ b/webpackDemo/package.json
@@ -2,10 +2,12 @@
   "name": "webpack-demo",
   "version": "1.0.0",
   "scripts": {
-    "dev": "webpack-dve-server --config webpack.dev.config.js --hot",
+    "start": "npm run dev",
+    "dev": "webpack-dev-server --config webpack.dev.config.js --hot --inline",
     "prod": "webpack --config webpack.prod.config.js"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   }
